welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: reassignment to val
    	k=k+1
         ^